# MQTT_PowerMeter

./: .gitignore  CMakeLists.txt  README.md  pytest_native_ota.py  version.txt
certs/: ca_cert.pem  ca_key.pem
libs/light_sensor/: CmakeLists.txt  Kconfig.projbuild
libs/light_sensor/include/: light_sensor.h
libs/light_sensor/src/: light_sensor.c
libs/mqtt_tcp/: CmakeLists.txt  Kconfig.projbuild
libs/mqtt_tcp/include/: mqtt_tcp.h
libs/mqtt_tcp/src/: mqtt_tcp.c
libs/ota/: CmakeLists.txt  Kconfig.projbuild
libs/ota/include/: ota.h
libs/ota/src/: ota.c
libs/wifi/: CmakeLists.txt  Kconfig.projbuild
libs/wifi/include/: wifi.h
libs/wifi/src/: wifi.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  main_app.c  native_ota_example.c
scripts/: ota_server.py  run_ota_server.cmd
server_certs/: ca_cert.pem
tests/: pytest_native_ota.py
